Corrected image alignment

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -171,6 +171,10 @@
     .about-img img {
         width: 55vw;
         /* border-radius: 50%; */
+        justify-content: center;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .about .about-img .sized-img {
